# karl

./: CMakeLists.txt  main.c  task_4.c
